[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/axe/Trap_Axe.png" type="Texture" id=1]
[ext_resource path="res://scripts/obstacles/Axe.gd" type="Script" id=2]
[ext_resource path="res://assets/axe/axe_wave2.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/axe/Handle.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 24 )

[node name="Axe" type="Area2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": "If player (physics layer 1) enters Trigger, spikes sprite will animate going up, inside the DamageArea. If player enters DamageArea, send signal."
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 16, 0 )
shape = SubResource( 3 )
disabled = true

[node name="AxePivot" type="Node2D" parent="."]
position = Vector2( 0, -160 )

[node name="Handle" type="Sprite" parent="AxePivot"]
position = Vector2( 64, -10 )
rotation = 1.5708
scale = Vector2( 0.685838, 0.503845 )
texture = ExtResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="Blade" type="Sprite" parent="AxePivot"]
position = Vector2( 152, -10 )
rotation = -1.57079
scale = Vector2( 0.342919, 0.251922 )
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="AxeSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SoundEffects"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
